# PaperCli

./: Dockerfile  README.md  pyproject.toml
claude-code/: SKILL.md
scripts/: discover_mcps.py  evaluate_candidates.py
src/paper_cli/: __init__.py  __main__.py  cli.py  config.py
src/paper_cli/sources/: arxiv.py  base_search.py  biorxiv.py  citeseerx.py  crossref.py  dblp.py  doaj.py  europepmc.py  google_scholar.py  hal.py  huggingface.py  inspirehep.py  oaipmh.py  openaire.py  openalex.py  openreview.py  paperswithcode.py  pmc.py  pubmed.py  scholar.py  semanticscholar.py  ssrn.py  unified.py  unpaywall.py  zenodo.py
tests/: test_sources_smoke.py
